# gwen

./: .gitignore  .oxfmtrc.json  AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  GWEN_SKILL.md  LICENSE  README.md  RELEASE.md  SECURITY.md  oxlint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.changeset/: VERSIONING.md  changelog.cjs  chatty-gifts-kneel.md  config.json  create-app-versions.md  famous-lemons-tease.md  famous-months-think.md  scope-migration-public.md  scope-migration-tooling.md  ten-plants-chew.md  wacky-cougars-hang.md  wicked-buttons-allow.md  wise-bottles-sip.md  witty-planets-buy.md
.claude/agents/: rfc-validator.md  rust-wasm-engineer.md  ts-engine-expert.md  ts-plugin-developer.md  ts-type-inference-expert.md
.gemini/agents/: rfc-validator.md  rust-engine-expert.md  ts-engine-expert.md  ts-plugin-developer.md  ts-type-inference-expert.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml  release.yml
.husky/: commit-msg  pre-commit
crates/gwen-core/: Cargo.toml
crates/gwen-core/src/: allocator.rs  bindings.rs  build_tools.rs  bulk_ops.rs  component.rs  entity.rs  events.rs  gameloop.rs  lib.rs  query.rs  renderer.rs  transform.rs  transform_math.rs
crates/gwen-core/src/ecs/: storage.rs
crates/gwen-core/src/physics2d/: mod.rs  world.rs
crates/gwen-core/src/physics3d/: mod.rs  world.rs  world.rs.bak
crates/gwen-core/tests/: allocator_tests.rs  component_tests.rs  entity_tests.rs  extended_tests.rs  integration_tests.rs  physics3d_extended_tests.rs  query_tests.rs  wasm_bindgen_tests.rs
crates/gwen-physics3d-fracture/: Cargo.toml
crates/gwen-physics3d-fracture/src/: lib.rs
crates/gwen-plugin-physics2d/: Cargo.toml
crates/gwen-plugin-physics2d/src/: bindings.rs  components.rs  lib.rs  memory.rs  world.rs
crates/gwen-plugin-physics2d/tests/: physics_world_tests.rs
crates/gwen-wasm-utils/: Cargo.toml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CLI.md  CLI_USAGE.md  DEPLOYMENT.md  GETTING_STARTED.md  PLUGIN_HOOKS_GUIDE.md  QUICK_RELEASE.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  index.md
docs/.vitepress/: config.ts
docs/api/: composables.md  engine-api.md  engine.md  helpers.md  layout.md  overview.md  physics2d.md  physics3d.md  scene-router.md  tween.md  types.md
docs/cli/: commands.md  overview.md
docs/config/: modules.md  overview.md  vite-extend.md
docs/core/: actors.md  architecture.md  components.md  configuration.md  context.md  entity-id.md  prefabs.md  scene-reload.md  scenes.md  systems.md  ui.md
docs/examples/: patterns.md  space-shooter.md
docs/guide/: debug-mode.md  error-bus.md  installation.md  layouts.md  philosophy.md  physics-composables.md  physics3d-composables.md  project-structure.md  quick-start.md  scene-router.md  tween.md  what-is-gwen.md
docs/kit/: custom-module.md  custom-plugin.md  helpers-api.md  overview.md  shared-memory.md  typescript-plugin.md  wasm-plugin.md
docs/plugins/: audio.md  debug.md  (+19 more)
internals-docs/: MIGRATION_HOOKS.md  debug-error-system.md  entity-id.md  gwen-ecs-optimizer.md  hooks.md  scene-reload.md  shared-array-buffer-memory-map.md  string-pool.md  vite-compile-time-optimization.md
playground/: .gitignore  engine.config.ts  gwen.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
scripts/: CLEAN_CARGO_README.md  bench-physics2d-bundle-size.mjs  bench-physics2d-solver.mjs  bench-physics2d-tilemap.mjs  build-wasm.sh  check-physics-deprecations.mjs  check-physics-deprecations.test.mjs  check-physics-perf-score.test.mjs  check-physics-playgrounds-e2e.test.mjs  check-physics-solver-bench.test.mjs  check-physics-tilemap-bench.test.mjs  check-physics-tree-shaking.test.mjs  check-wasm-sizes.sh  clean-cargo.sh  physics-perf-score.mjs  physics-perf-thresholds.json  smoke-typecheck.sh  sync-create-app-versions.mjs  validate-commit-msg.js  verify-memory-layout.mjs  verify-namespace-migration.sh  verify-release.mjs
(+262 files in other folders)
