[package]
name = "gwen-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "Window",
    "Document",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
