[package]
name = "gwen-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "Window",
    "Document",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# wasm-opt bundled with older wasm-pack doesn't support bulk-memory — skip it.
# The .wasm produced by rustc is already valid and loads fine in all modern browsers.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

