[package]
name = "gwen-core"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"
authors = ["Jonathan Moutier <jonathan.moutier.dev@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "Window",
    "Document",
] }
bytemuck = { version = "1", features = ["derive"] }

# Physics — 2D (Rapier2D)
rapier2d = { version = "0.22", default-features = false, features = ["f32", "dim2"], optional = true }
# Physics — 3D (Rapier3D)
rapier3d = { version = "0.22", default-features = false, features = ["f32", "dim3"], optional = true }
# Pathfinding
pathfinding = { version = "4.3", optional = true }

[features]
default = []
physics2d = ["dep:rapier2d", "pathfinding-2d"]
physics3d = ["dep:rapier3d", "pathfinding-3d"]
pathfinding-2d = ["dep:pathfinding"]
pathfinding-3d = ["dep:pathfinding"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

# wasm-opt bundled with older wasm-pack doesn't support bulk-memory — skip it.
# The .wasm produced by rustc is already valid and loads fine in all modern browsers.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[[bin]]
name = "bench_solver_presets"
required-features = ["physics2d"]

