[package]
name = "gwen-physics3d-fracture"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"
authors = ["Jonathan Moutier <jonathan.moutier.dev@gmail.com>"]
description = "Voronoi mesh fracture for GWEN Physics 3D — standalone WASM module"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
